--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,20 @@
 p::first-line {
   font-weight: bold;
 }
+
+
+@media only screen and (min-width: 990px){
+.navbar-nav {
+  flex-direction: row;
+}
+.nav-item {
+  display: flex;
+  margin: 10px;
+  padding: 5px;
+}
+}
+.nav-item {
+  display: flex;
+  margin: 5px;
+  padding: 2.5px;
+}
