Color design, specificity override for bootstrap dark, and hamburger update
Settled on a permanent color scheme and determined how to override the default bootstrap nav-dark colors. Also determined how to adjust the hamburger values/picture and settled on a distinct border color.

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,18 @@ p::first-line {
   font-weight: bold;
 }
 
-
+.body-class {
+  background-color: #05445E;
+}
+.navbar-custom{
+  background-color: #189AB4;
+}
+.navbar-dark .navbar-nav .nav-link{
+  color: #D4F1F4;
+}
+.navbar-dark .navbar-toggler{
+  border-color: #05445E;
+}
 @media only screen and (min-width: 990px){
 .navbar-nav {
   flex-direction: row;
