--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,15 @@
   margin-right: auto;
 }
 .photo {
-  border-radius: 100%;
-  display: block;
+  border-radius: 5%;
+  border-style: inset;
+}
+.photo-container{
+  display: flex;
   margin-left: auto;
   margin-right: auto;
 }
-p::first-line {
+.text-content::first-line {
   font-weight: bold;
 }
 
@@ -25,6 +28,24 @@ p::first-line {
 }
 .navbar-dark .navbar-toggler{
   border-color: #05445E;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.text-custom{
+  color: #D4F1F4;
+}
+.text-content{
+  color: #D4F1F4;
+}
+@media only screen and (max-width: 497px){
+.photo{
+  border-radius: 5%;
+  width: 90%;
+  height: 90%;
+}
 }
 @media only screen and (min-width: 990px){
 .navbar-nav {
