--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@
   top: 0;
   width: 100%;
 }
+.card-body{
+  background-color:#189AB4;
+  border-color: #189AB4;
+  color:#D4F1F4;
+}
 .text-custom{
   color: #D4F1F4;
 }
