Contact Form and Social media
Added a rudimentary contact form with appropriate types for email,phone,text based on bootstrap guidelines. Also implemented social media icons and links in their recommended manner.

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,20 @@
 .text-content{
   color: #D4F1F4;
 }
+.form-container{
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 60px;
+  border-style: inset;
+  border-radius: 10px;
+  padding: 15px;
+  background-color:#189AB4;
+  color:white;
+}
+.icon{
+  font-size:50px;
+}
 @media only screen and (max-width: 497px){
 .photo{
   border-radius: 5%;
